k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sequence-game
  labels:
    name: sequence-game
    app: sequence-game
